...
                ),
                Expanded(
                  flex: 4,
                  child: Padding(
                    padding: const EdgeInsets.only(right: 2.0),
                    child: RaisedButton(
                      child: Text("LOY"),
                      textColor: mapNotifier.loyButtonColor.elementAt(0),
                      color: mapNotifier.loyButtonColor.elementAt(1),
                      shape: RoundedRectangleBorder(
                          borderRadius:
                              BorderRadius.circular(constant.BORDER_RADIUS)),
                      onPressed: () {
...
                ),
                Expanded(
                  flex: 4,
                  child: Padding(
                    padding: const EdgeInsets.only(right: 2.0),
                    child: RaisedButton(
                      child: Text("SGW"),
                      textColor: mapNotifier.sgwButtonColor.elementAt(0),
                      color: mapNotifier.sgwButtonColor.elementAt(1),
                      shape: RoundedRectangleBorder(
                          borderRadius:
                              BorderRadius.circular(constant.BORDER_RADIUS)),
                      onPressed: () {
...
  Widget buildSuggestions(BuildContext context) {
    // If search was unfocused and refocused but no change
    if (_lastKnownQueryLength == query.length) {
      // then build ListView from history
      if (_history != null) {
        return ListView.builder(
          key: Key('search_list'),
          itemCount: _history.length,
          itemBuilder: (context, index) {
            if (_history[index] is HeadingItem) {
              return ListTile(
                title: Text(
                  _history[index].description,
...
                onTap: () {
                  PlaceItem selected = _history[index];
                  Navigator.pop(context);
                  this.coordinate(getPlaceDetails(selected.placeId));
                },
                leading: Icon(Icons.place),
                title: Text(_history[index].description, key: Key('list_text')),
              );
            }
          },
        );
      }
      return ListView();
...
