...
                children: <Widget>[
                  FloatingActionButton(
                    heroTag: 'location',
                    onPressed: goToCurrent,
                    backgroundColor: Colors.white,
                    foregroundColor: constant.COLOR_CONCORDIA,
                    tooltip: 'Get Location',
                    child: Icon(Icons.my_location),
                  ),
                  SizedBox(
                    height: 16,
                  ),
                  FloatingActionButton(
                    heroTag: 'direction',
                    tooltip: 'Get directions',
                    onPressed: () {
                      mapMarkers.removeWhere(
                          (marker) => marker.markerId.value == 'pop-up');
                      Navigator.push(
                        context,
                        MaterialPageRoute(
...
