...
                          child: Text(
                            "${directionNotifier.getDuration()} (${directionNotifier.getDistance()})",
                            style: TextStyle(color: Colors.black, fontSize: 18),
                          ),
                        ),
                        IconButton(
                            key: Key('Direction Panel close'),
                            icon: Icon(Icons.close),
                            onPressed: () => {
                                  directionNotifier
                                      .setShowDirectionPanel(false),
                                  directionNotifier.clearAll(),
                                  widget.removeDirectionPolyline()
...
